--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     </div>
     <main>
       <h1 class="heading">Practical 8</h1>
-      <h2 style="margin-bottom: 20px">What is Data Structure:</h2>
-      <p>
+      <h2 style="margin-bottom: 20px">Data Structure:</h2>
+      <p id="gyan">
         Linear data structure: Data structure in which data elements are
         arranged sequentially or linearly, where each element is attached to its
         previous and next adjacent elements, is called a linear data structure.
@@ -77,6 +77,7 @@
         <li class="dsa">Backtracking</li>
         <li class="dsa">Greedy Algorithm</li>
       </ul>
+      <div id="gyaan"></div>
     </main>
     <footer id="f">
       <div class="footer_bottom">
